--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,11 @@ bld/
 [Oo]ut/
 [Ll]og/
 [Ll]ogs/
+
+#CUSTOM ADDED
 build/
 extern/
+main.cpp
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
